# Asistente-Interno-Microsoft-Teams

./: .env.azure.example  .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-app-service.yml  deploy-functions.yml  (+1 more)
alembic/: env.py
app-service/: Dockerfile  main.py
data/: seed_documents.json  seed_tickets.json
docs/: architecture.md  cost-control.md  datasource_viability_audit.md  demo-checklist.md  demo-script.md  deployment-azure.md  deployment-local.md  faq.md  portfolio-summary.md  project-card.md  rag-evaluation.md  synthetic_corpus_notes.md  teams-setup.md  tradeoffs-and-decisions.md
evaluation/: README.md  __init__.py  types.py  utils.py
infra/: README.md  main.bicep  main.json  main.parameters.example.json
scripts/: __init__.py  _azure_common.sh  _demo_common.sh  audit_datasource_viability.py  azure_login_check.sh  backfill_conversation_memory.py  check_cloud_index.sh  check_index.py  compare_retrieval_configs.py  configure_app_settings.sh  demo_health_check.sh  demo_prep.sh  deploy_app_service.sh  deploy_functions.sh  deploy_infra.sh  ensure_lmstudio.py  export_demo_questions.py  generate_seed_data.py  init_db.py  load_seed.py  package_portfolio_bundle.sh  package_teams_app.sh  rebuild_cloud_index.sh  rebuild_index.py  reset_local_db.py  run_rag_eval.py  seed_cloud_db.sh  seed_db.py  serve_reranker.py  smoke_test_cloud.sh  start_postgres_azure.sh  stop_postgres_azure.sh  validate_seed_data.py
teams-app/: README.md  manifest.json  manifest.template.json
tests/: conftest.py
(+154 files in other folders)
